<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

    <Button
            android:id="@+id/btnHttp"
            style="@style/btnMain"
            app:layout_constraintBottom_toTopOf="@id/btnVolley"
            android:text="@string/jsonParsing"/>
    <Button
            android:id="@+id/btnVolley"
            style="@style/btnMain"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/volley"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:id="@+id/btnRetrofit"
            app:layout_constraintTop_toBottomOf="@id/btnVolley"
            style="@style/btnMain"
            android:text="@string/retrofit"/>


</android.support.constraint.ConstraintLayout>