<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="setData" type="com.indyzen.jsonparsing.ui.DataModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
    >


        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical">
                <LinearLayout
                        android:id="@+id/llID"
                        style="@style/llRow">
                    <TextView style="@style/txtData"
                              android:text="@string/id"/>
                    <TextView
                            style="@style/txtColon"/>
                    <TextView
                            android:id="@+id/txtId"
                            style="@style/txtData"
                            android:text="@{setData.id}"
                    />
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/llName"

                        style="@style/llRow">
                    <TextView style="@style/txtData"
                              android:text="@string/name"/>
                    <TextView
                            style="@style/txtColon"/>
                    <TextView
                            android:id="@+id/txtName"
                            style="@style/txtData"
                            android:text="@{setData.name}"

                    />
                </LinearLayout>
                <LinearLayout style="@style/llRow">
                    <TextView style="@style/txtData"
                              android:text="@string/email"/>
                    <TextView
                            style="@style/txtColon"/>
                    <TextView
                            android:id="@+id/txtEmail"
                            style="@style/txtData"
                            android:text="@{setData.email}"

                    />
                </LinearLayout>
                <LinearLayout style="@style/llRow">
                    <TextView style="@style/txtData"
                              android:text="@string/address"/>
                    <TextView
                            style="@style/txtColon"/>
                    <TextView
                            android:id="@+id/txtAddress"
                            style="@style/txtData"
                            android:text="@{setData.address}"

                    />
                </LinearLayout>

                <LinearLayout style="@style/llRow">
                    <TextView style="@style/txtData"
                              android:text="@string/mobile"/>
                    <TextView
                            style="@style/txtColon"/>
                    <TextView
                            android:id="@+id/txtMobile"
                            style="@style/txtData"
                            android:text="@{setData.mobile}"

                    />
                </LinearLayout>
                <LinearLayout style="@style/llRow">
                    <TextView style="@style/txtData"
                              android:text="@string/home"/>
                    <TextView
                            style="@style/txtColon"/>
                    <TextView
                            android:id="@+id/txtHome"
                            style="@style/txtData"
                            android:text="@{setData.home}"

                    />
                </LinearLayout>
                <LinearLayout style="@style/llRow">
                    <TextView style="@style/txtData"
                              android:text="@string/office"/>
                    <TextView
                            style="@style/txtColon"/>
                    <TextView
                            android:id="@+id/txtOffice"
                            style="@style/txtData"
                            android:text="@{setData.office}"
                    />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</layout>